[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis exercise"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"