[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis exercise"
authors = ["Your Name <toqa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
numpy = "2.2.0"
matplotlib = "3.10.8"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"