[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis exercise"
authors = ["TOQA <toqa@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.1.0"
numpy = ">=1.25.0"
matplotlib = ">=3.7.2"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"